<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Views.SuccessfullyActivity">

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/AppName"
        android:onClick="callFinish"
        android:padding="5dp"
        android:src="@drawable/ic_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/SuCreateAcc"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/SuComplete"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/AppName"
            android:src="@drawable/ic_verified" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/SuLogan"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorBlack"
            android:fontFamily="@font/muli_black"
            android:onClick="callFinish"
            android:text="@string/LG"
            android:textColor="@color/colorWhite"
            android:transitionName="transition_next" />
    </LinearLayout>

</LinearLayout>