<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.Fragments.PostTypeFragment">

    <LinearLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_border_bottom"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CTYourName"
            android:textColor="@color/colorTextDefault"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Võ Thanh Trí"
            android:textColor="@color/colorTextDefault"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:background="@drawable/bg_border_bottom"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PhoneNumber"
            android:textColor="@color/colorTextDefault"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="0332336656"
            android:textColor="@color/colorTextDefault"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdt"
        android:background="@drawable/bg_border_bottom"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvHI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/CTCity"
            android:textColor="@color/colorTextDefault"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_dropdown"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:inputType="none"
            android:text="@string/CTDefault"
            android:textColor="@color/colorTextDefault"
            android:textSize="16sp"
            tools:ignore="LabelFor,RelativeOverlap" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/province"
        android:background="@drawable/bg_border_bottom"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/CTDistrict"
            android:textColor="@color/colorTextDefault"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etQH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_dropdown"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:hint="@string/CTSelect"
            android:inputType="none"
            android:textColor="@color/colorTextDefault"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/bab"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_pet_white"
            android:contentDescription="@string/AppName"
            android:padding="18dp" />

        <TextView
            android:id="@+id/tvBab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Confirm"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>